transaction-service/k8s/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-service-prod-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transaction-prod-service
  template:
    metadata:
      labels:
        app: transaction-prod-service
    spec:
      containers:
        - name: transaction-prod-service
          image: transaction-service-dev
          imagePullPolicy: Never
          ports:
            - containerPort: 3005
          workingDir: /app   
          command: ["npm", "run", "start" ]
