transaction-service/k8s/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transaction-prod-service
spec:
  selector:
    app: transaction-prod-service
  ports:
    - port: 120
      targetPort: 3005
