transaction-service/k8s/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transaction-prod-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: transaction.prod.local
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: transaction-prod-service
              port: 
                number: 120
